# 370Z-CAN-Logger

./: .gitignore  370Z CAN.xlsx  370Z_can_decode.ipynb  README.md  can_database_analyzer.ipynb  can_decoder_cli.py  decoding.ipynb  hello.py  main.py  pyproject.toml  screenlog.0
arduino/: CANReceiverCustom.ino  receive_monitor.ino
arduino/CANReceiverCustom/: CANReceiverCustom.ino
arduino/canbus-monitor/: canbus-monitor.ino
arduino_logs/: 370Z-log-sample.txt  tee
can-dash/: package-lock.json  package.json
can-dash/src/: App.tsx
can-dash/src-tauri/: Cargo.toml  tauri.conf.json
can-dash/src-tauri/src/: main.rs
can-dash/src/components/: Dashboard.tsx
candata/: bcm_pids.csv  consult.csv  extended_pids.csv  ids.csv  ids_of_interest.csv  more_signals.csv  signals.csv  standard_pids.csv  type.csv  units.csv
logs/: screenlog.0
pico/: code.py
shell/: candown.sh  canup.sh
